# vision-lab

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
.github/workflows/: quality.yml
apps/operator-ui/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/operator-ui/src-tauri/icons/: icon.icns
apps/operator-ui/src-tauri/src/: lib.rs  main.rs
apps/operator-ui/ui/: eslint.config.js  index.html  package.json  vite.config.ts
apps/operator-ui/ui/src/: App.tsx  styles.css
apps/operator-ui/ui/src/app/: App.tsx  AppShell.tsx
apps/operator-ui/ui/src/components/controls/: CameraConfigPanel.tsx  CameraControls.tsx  RecorderControls.tsx  RingGridConfigPanel.tsx  VisionControls.tsx
apps/operator-ui/ui/src/components/live/: FrameCanvas.tsx  LiveViewport.tsx  OverlayLayer.tsx  ViewportToolbar.tsx
apps/operator-ui/ui/src/components/status/: ComponentHealth.tsx  SystemStatusBar.tsx
apps/operator-ui/ui/src/components/timeline/: EventTimeline.tsx  TimelineItem.tsx
apps/operator-ui/ui/src/components/ui/: Button.tsx  Metric.tsx  Panel.tsx  SegmentedControl.tsx  Select.tsx  StatusPill.tsx  Toolbar.tsx
apps/operator-ui/ui/src/domain/: camera.ts  geometry.ts  overlays.ts  recorder.ts  replay.ts  system.ts  vision.ts
apps/operator-ui/ui/src/hooks/: useCommandStatus.ts  useFrameCanvas.ts  useLatestFrame.ts  useReplay.ts  useRoiInteraction.ts  useSystemView.ts
apps/operator-ui/ui/src/styles/: globals.css
apps/operator-ui/ui/src/tauri/: commands.ts  events.ts  host.ts
crates/camera-mac/: Cargo.toml
crates/camera-mac/src/: avfoundation.rs  lib.rs
crates/comm-core/: Cargo.toml
crates/comm-core/src/: lib.rs
crates/comm-local/: Cargo.toml
crates/comm-local/src/: lib.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs
crates/system-mirror/: Cargo.toml
crates/system-mirror/src/: lib.rs
crates/system-mirror/tests/: camera_sim_flow.rs
crates/vision-contracts/: Cargo.toml
crates/vision-contracts/src/: lib.rs
crates/vision-processing/: Cargo.toml
crates/vision-processing/src/: lib.rs
docs/: architecture.md  backlog.md  roadmap.md  vision-lab-codex-handoff.md
docs/adr/: 0001-communication-first-local-monolith.md  0001.md  0002-quality-gates-and-online-chess-workflow.md  0003-native-macos-camera-acquisition.md  0004-functional-first-operator-ui-design.md  0005-coded-hex-ringgrid-target-configuration.md
scripts/: quality.sh
