[package]
name = "recorder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
comm-core.workspace = true
comm-local.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
vision-contracts.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
